--- a/package.json
+++ b/package.json
@@ -1,14 +1,1 @@
-{"name": "node",
-  "main": "index.js",
-  "scripts": {
-
-    "start": "nodemon index.js"
-   
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "firebase": "^10.10.0",
-    "nodemon": "^3.1.0"
-  }
-}
+{"name":"node","main":"index.js","scripts":{"start":"nodemon index.js"},"dependencies":{"cors":"^2.8.5","express":"^4.19.2","firebase":"^10.10.0","nodemon":"^3.1.0"}}
